tests/should_fail/ghost_mapping.stderr
error: called prophetic logic function `creusot_contracts::__stubs::fin` in logic context
  --> ghost_mapping.rs:11:21
   |
11 |     pearlite! { |_| ^x }
   |                     ^^

error: called prophetic logic function `creusot_contracts::__stubs::fin` in logic context
  --> ghost_mapping.rs:21:32
   |
21 |     pearlite! { forall<_x:Int> ^y == 1i32 }
   |                                ^^

error: aborting due to 2 previous errors

